2023-12-08T08:17:23Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7138989638 # 2151
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-08
* notice: last 14d: unq all: 19 32
* notice: prev accum: outdated-unq outdated-all / unq all: 1419 3353 / 1443 3385
* notice: next accum: outdated-unq outdated-all / unq all: 1419 3353 / 1445 3387
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-11-24 2023-12-08]

2023-12-08T01:01:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7135969985 # 2150
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-08
* notice: last 14d: unq all: 17 31
* notice: prev accum: outdated-unq outdated-all / unq all: 1394 3316 / 1443 3385
* notice: next accum: outdated-unq outdated-all / unq all: 1419 3353 / 1443 3385
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +3 -1 -1 / 1 2
* notice: removed / changed dates: [2023-11-23] / [2023-11-24]

2023-12-07T08:17:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7125493377 # 2148
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-07
* notice: last 14d: unq all: 27 46
* notice: prev accum: outdated-unq outdated-all / unq all: 1394 3316 / 1436 3376
* notice: next accum: outdated-unq outdated-all / unq all: 1394 3316 / 1443 3385
* notice: prev exec diff / last date diff / accum: unq all: +7 +9 -5 -8 / +7 +9 -0 -0 / 7 9
* notice: removed / changed dates: [] / [2023-11-23 2023-12-07]

2023-12-07T01:00:56Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7122316116 # 2147