@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-12-08T08:17:23Z",
-  "count_outdated" : 3353,
-  "uniques_outdated" : 1419,
+  "timestamp" : "2023-12-09T00:59:32Z",
+  "count_outdated" : 3356,
+  "uniques_outdated" : 1421,
   "count" : 3387,
   "uniques" : 1445,
   "clones" : [
-    {
-      "timestamp": "2023-11-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "count_decinc": [ 2, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
     {
       "timestamp": "2023-11-25T00:00:00Z",
       "count": 2,
