@@ -1,3 +1,12 @@
+2023-12-09T00:59:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7147946181 # 2153
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-09
+* notice: last 14d: unq all: 19 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 1419 3353 / 1445 3387
+* notice: next accum: outdated-unq outdated-all / unq all: 1421 3356 / 1445 3387
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-11-24] / []
+
 2023-12-08T08:17:23Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7138989638 # 2151
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2023-12-08
